Fix gap between header and content

--- a/wordpress/wp-content/themes/nick-jaussi/assets/styles/modules/header.scss
+++ b/wordpress/wp-content/themes/nick-jaussi/assets/styles/modules/header.scss
@@ -1,6 +1,7 @@
 .header {
   font-family: $font-family-roboto;
   order: 2;
+  margin-left: 2rem;
   padding-right: 2rem;
   padding-top: 2rem;
   text-align: right;
